--- a/포토폴리오1/index.html
+++ b/포토폴리오1/index.html
@@ -101,7 +101,9 @@
         </ul>
       </div>
     </section>
-
+    <section id="lotte" class="work">
+      
+    </section>
     <script type="text/javascript">
       AOS.init();
     </script>
